<resources>

    <string name="app_name">Project Bourse</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Project Bourse</string>
    <string name="portfolio">Portfolio</string>
    <string name="analysis">Analysis</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_portfolio">Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_portfolio">CreatePortfolioActivity</string>
    <string name="title_activity_delete_portfolio">DeletePortfolioActivity</string>
    <string name="createPortfolio">Create portfolio</string>
    <string name="viewPortoflio">View portoflio</string>
    <string name="updatePortfolio">Update portfolio</string>
    <string name="deletePortfolio">Delete portfolio</string>
    <string name="portfolioName">Portfolio name</string>
    <string name="addStock">Add stock</string>
    <string name="symbol">Symbol</string>
    <string name="name">Name</string>
    <string name="numberOfShares">Number of shares</string>
    <string name="basePrice">Base price</string>
    <string name="create">Create</string>
    <string name="stopLoss1">Stop loss 1</string>
    <string name="stopLoss2">Stop loss 2</string>
    <string name="stopLoss3">Stop loss 3</string>
    <string name="takeProfit1">Take profit 1</string>
    <string name="takeProfit2">Take profit 2</string>
    <string name="takeProfit3">Take profit 3</string>
    <string name="goToMenu">Go to Menu</string>
    <string name="selectPortfolioToDelete">Select the portfolio you wish to delete.</string>
    <string name="title_activity_view_portfolio">ViewPortfolio</string>
    <string name="selectPortfolioToView">Select the portfolio you wish to view.</string>
    <string name="title_activity_portfolio_and_stocks">PortfolioAndStocksActivity</string>
    <string name="selectAStockToWatchItsDetailsOrToEdit">Select a stock to watch its details or to edit them</string>
    <string name="title_activity_add_stock">AddStockActivity</string>
    <string name="title_activity_edit_stock">EditStockActivity</string>
    <string name="add">Add</string>
    <string name="sellShares">Sell shares</string>
    <string name="buyShares">Buy shares</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_analysis">AnalysisActivity</string>
    <string name="createAnalysis">Create analysis</string>
    <string name="title_activity_create_analysis">CreateAnalysisActivity</string>
    <string name="title_activity_add_rule">AddRuleActivity</string>
    <string name="addRule">Add rule</string>
    <string name="getAnalysisResults">Get results</string>
    <string name="title_activity_show_analysis_results">ShowAnalysisResults</string>
    <string name="analysisResults">Analysis results</string>
    <string name="selectAStock">Select a stock</string>
    <string name="title_activity_show_pending_analysis">ShowPendingAnalysis</string>
    <string name="pendingAnalysis">Pending analysis</string>
    <string name="selectTheAnalysisToRetrieveItsResults">Select the analysis you want</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_add_specific_stock">AddSpecificStockActivity</string>
    <string name="title_activity_edit_stocks_out_of_limits">EditStocksOutOfLimitsActivity</string>
    <string name="doNothing">Do nothing</string>
    <string name="title_activity_select_statistics">SelectStatisticsActivity</string>
    <string name="selectStatistics">Please select one</string>
    <string name="stocks">Stocks</string>
    <string name="stock">Stock</string>
    <string name="title_activity_select_portfolio">SelectPortfolioActivity</string>
    <string name="title_activity_select_stock">SelectStockActivity</string>
    <string name="title_activity_portfolio_statistics">PortfolioStatisticsActivity</string>
    <string name="title_activity_stock_statistics">StockStatisticsActivity</string>
    <string name="portfolioStocks">Portfolio stocks</string>
    <string name="title_activity_add_rule_to_analysis">AddRuleToAnalysisActivity</string>

</resources>