<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/MainTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/createPortfolio"
        style="@style/SubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createPortfolio" />

    <Button
        android:id="@+id/viewPortfolio"
        style="@style/SubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewPortoflio" />

    <Button
        android:id="@+id/deletePortfolio"
        style="@style/SubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletePortfolio" />

</LinearLayout>