<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        style="@style/MainTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectStatistics"
        tools:context=".SelectStatisticsActivity" />

    <Button
        android:id="@+id/btnPortfolio"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio" />

    <Button
        android:id="@+id/btnStock"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock" />

</LinearLayout>