<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/MainTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createPortfolio"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView2"
                style="@style/SmallTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portfolioName"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:width="210dip" />

            <EditText
                android:id="@+id/portfolioName"
                style="@style/SmallEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/createPortfolio"
                style="@style/RegularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/addStock"
                style="@style/RegularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addStock" />

            <Button
                android:id="@+id/goToMenu"
                style="@style/RegularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goToMenu" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>